--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,13 @@
-body{
+@forward "globals";
+@use "utils" as breakpoint; 
+
+body {
+  background-color: #f2f2f2;
+  @include breakpoint.media('md') {
+  }
 }
 
+header,
+main {
+  background-color: white;
+}
