--- a/src/sass/globals/_typography.scss
+++ b/src/sass/globals/_typography.scss
@@ -1,29 +1,19 @@
 :root {
-  // Fonts families
-  --ff-Fraunces: "Fraunces 144pt";
-  --ff-Manrope: "Manrope";
+  // Fonts family
+  --ff-PlusJakartaSans: "Plus Jakarta Sans", sans-serif;
 
   // Font sizes
   --fs-16: 1rem;
   --fs-18: 1.125rem;
-  --fs-20: 1.25rem;
   --fs-24: 1.5rem;
-  --fs-28: 1.75rem;
   --fs-32: 2rem;
-  --fs-48: 3rem;
-  --fs-50: 3.125rem;
+  --fs-40: 2.5rem;
   --fs-56: 3.5rem;
-  --fs-60: 3.75rem;
-  --fs-80: 5rem;
-
+ 
   // Font weigths
-  --fw-600: 600;
+  --fw-500: 500;
   --fw-700: 700;
-}
-
-h1,
-h2 {
-   margin-top: 0;
+  --fw-800: 800;
 }
 
 a,
@@ -31,3 +21,4 @@ a:active,
 a:visited {
   text-decoration: none;
 }
+
