--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,19 +1,84 @@
 @forward "globals";
-@use "utils" as breakpoint;
+@use "utilities" as breakpoint;
 
 body {
   display: grid;
   place-content: center;
   min-height: 100vh;
   background-color: #f2f2f2;
+  font-family: var(--ff-PlusJakartaSans);
   @include breakpoint.media("md") {
   }
-}
 
-header,
-main {
-  background-color: white;
-  max-width: 375px;
-  width: 100%;
-  margin-inline: auto;
+  header,
+  main {
+    max-width: 375px;
+    background-color: var(--white);
+    width: 100%;
+    padding: 1rem;
+    margin-inline: auto;
+  }
+
+  .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    &__logo {
+      max-width: 89px;
+    }
+
+    &__btn {
+      display: inline-block;
+      background-color: var(--color2);
+      color: var(--white);
+      font-size: var(--fs-16);
+      text-align: center;
+      padding: 1rem 1.5rem;
+      border-radius: 50px;
+
+      &:hover {
+        background-color: var(--color1);
+      }
+    }
+  }
+  .intro {
+    &__title {
+      max-width: 343px;
+      font-size: var(--fs-40);
+      font-weight: var(--fw-800);
+      margin-bottom: 1.5rem;
+    }
+
+    &__text {
+      font-size: var(--fs-16);
+      font-weight: var(--fw-500);
+      color: var(--color3);
+      line-height: 1.625;
+      margin-bottom: 1rem;
+    }
+
+    &__btn {
+      display: inline-block;
+      background: var(--gradient1);
+      color: var(--white);
+      font-size: var(--fs-16);
+      text-align: center;
+      padding: 1rem 2.3rem;
+      border-radius: 50px;
+      margin-bottom: 1.3rem;
+
+      &:hover {
+        background: linear-gradient(
+          180deg,
+          rgba(255, 111, 72, 0.5) 0.04%,
+          rgba(240, 42, 166, 0.5) 100%
+        );
+      }
+    }
+
+    &__picture {
+      
+    }
+  }
 }
