--- a/src/sass/globals/_typography.scss
+++ b/src/sass/globals/_typography.scss
@@ -5,6 +5,7 @@
   // Font sizes
   --fs-16: 1rem;
   --fs-18: 1.125rem;
+  --fs-20: 1.25rem;
   --fs-24: 1.5rem;
   --fs-32: 2rem;
   --fs-40: 2.5rem;
