--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,7 +5,7 @@ body {
   display: grid;
   place-content: center;
   min-height: 100vh;
-  background-color: #f2f2f2;
+  background-color: #dfdfdf;
   font-family: var(--ff-PlusJakartaSans);
   @include breakpoint.media("md") {
   }
@@ -33,7 +33,7 @@ body {
       background-color: var(--color2);
       color: var(--white);
       font-size: var(--fs-16);
-      text-align: center;
+      font-weight: var(--fw-700);
       padding: 1rem 1.5rem;
       border-radius: 50px;
 
@@ -42,43 +42,132 @@ body {
       }
     }
   }
-  .intro {
-    &__title {
-      max-width: 343px;
-      font-size: var(--fs-40);
-      font-weight: var(--fw-800);
-      margin-bottom: 1.5rem;
-    }
 
-    &__text {
-      font-size: var(--fs-16);
-      font-weight: var(--fw-500);
-      color: var(--color3);
-      line-height: 1.625;
-      margin-bottom: 1rem;
+  main {
+    background: linear-gradient(180deg, var(--white) 25%, #f0f2ff 100%);
+
+    .intro {
+      &__title {
+        max-width: 343px;
+        color: var(--color2);
+        font-size: var(--fs-40);
+        font-weight: var(--fw-800);
+        margin-bottom: 1.5rem;
+      }
+
+      &__text {
+        font-size: var(--fs-16);
+        font-weight: var(--fw-500);
+        color: var(--color3);
+        line-height: 1.625;
+        margin-bottom: 1rem;
+      }
+
+      &__btn {
+        display: inline-block;
+        background: var(--gradient1);
+        color: var(--white);
+        font-size: var(--fs-16);
+        font-weight: var(--fw-700); 
+        padding: 1rem 2.3rem;
+        border-radius: 50px;
+        margin-bottom: 1.3rem;
+
+        &:hover {
+          background: linear-gradient(
+            180deg,
+            rgba(255, 111, 72, 0.5) 0.04%,
+            rgba(240, 42, 166, 0.5) 100%
+          );
+        }
+      }
+
+      &__picture {
+      }
+    }
+    .courses {
+      &__title {
+        background: var(--gradient1);
+        color: var(--white);
+        font-size: var(--fs-24);
+        font-weight: var(--fw-800);
+        padding: 1.3rem;
+        border-radius: 10px;
+        margin-bottom: 2.3rem;
+      }
+
+      &__container {
+      }
+
+      &__card {
+        position: relative;
+        background-color: var(--white);
+        padding: 1rem 1.5rem 1.5rem;
+        margin-bottom: 2.3rem;
+        border-radius: 5px;
+        box-shadow: 0px 1px rgba(0, 0, 0, 0.1);
+      }
+
+      &__card-img {
+        position: absolute;
+        transform: translateY(-70%);
+      }
+
+      &__card-title {
+        color: var(--color2);
+        font-size: var(--fs-20);
+        font-weight: var(--fw-800);
+        margin-top: 2.3rem;
+        margin-bottom: 1rem;
+      }
+      &__card-text {
+        max-width: 286px;
+        color: var(--color3);
+        font-size: var(--fs-16);
+        font-weight: var(--fw-500);
+        line-height: 1.625;
+        margin-bottom: 1.3rem;
+      }
+
+      &__link {
+        color: var(--color4);
+        font-size: var(--fs-18);
+        font-weight: var(--fw-700);
+        
+        &:hover {
+          color: var(--color5);
+        }
+      }
+    }
+  }
+
+  .footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--color2);
+    padding: 2rem 1rem;
+
+    &__logo {
+      max-width: 89px;
     }
 
     &__btn {
       display: inline-block;
-      background: var(--gradient1);
+      background: var(--gradient2);
       color: var(--white);
       font-size: var(--fs-16);
-      text-align: center;
-      padding: 1rem 2.3rem;
+      font-weight: var(--fw-700);
+      padding: 1rem 1.5rem;
       border-radius: 50px;
-      margin-bottom: 1.3rem;
 
       &:hover {
         background: linear-gradient(
           180deg,
-          rgba(255, 111, 72, 0.5) 0.04%,
-          rgba(240, 42, 166, 0.5) 100%
+          lighten(rgba(72, 81, 255, 1),10%) 0.04%,
+          lighten(rgba(240, 42, 166, 1), 10%) 100%
         );
       }
-    }
-
-    &__picture {
-      
-    }
+    } 
   }
 }
