--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,8 +7,6 @@ body {
   min-height: 100vh;
   background-color: #dfdfdf;
   font-family: var(--ff-PlusJakartaSans);
-  @include breakpoint.media("md") {
-  }
 
   header,
   main {
@@ -16,7 +14,11 @@ body {
     background-color: var(--white);
     width: 100%;
     padding: 1rem;
-    margin-inline: auto;
+
+    @include breakpoint.media("md") {
+      max-width: 768px;
+      padding: 1.5rem 2.5rem;
+    }
   }
 
   .header {
@@ -45,8 +47,20 @@ body {
 
   main {
     background: linear-gradient(180deg, var(--white) 25%, #f0f2ff 100%);
+    overflow: hidden;
 
     .intro {
+      @include breakpoint.media("md") {
+        display: flex;
+        margin-bottom: -12rem;
+      }
+
+      &__container {
+        @include breakpoint.media("md") {
+          flex: 0 0 60%;
+          // transform: translateY(45px);
+        }
+      }
       &__title {
         max-width: 343px;
         color: var(--color2);
@@ -54,21 +68,23 @@ body {
         font-weight: var(--fw-800);
         margin-bottom: 1.5rem;
       }
-
       &__text {
         font-size: var(--fs-16);
         font-weight: var(--fw-500);
         color: var(--color3);
         line-height: 1.625;
         margin-bottom: 1rem;
-      }
 
+        @include breakpoint.media("md") {
+          margin-bottom: 1.3rem;
+        }
+      }
       &__btn {
         display: inline-block;
         background: var(--gradient1);
         color: var(--white);
         font-size: var(--fs-16);
-        font-weight: var(--fw-700); 
+        font-weight: var(--fw-700);
         padding: 1rem 2.3rem;
         border-radius: 50px;
         margin-bottom: 1.3rem;
@@ -83,8 +99,18 @@ body {
       }
 
       &__picture {
+        @include breakpoint.media("md") {
+          flex: 0 0 100%;
+        }
+      }
+      &__img {
+        @include breakpoint.media("md") {
+          width: 100%;
+          transform: translate(-70px, -220px);
+        }
       }
     }
+
     .courses {
       &__title {
         background: var(--gradient1);
@@ -94,9 +120,6 @@ body {
         padding: 1.3rem;
         border-radius: 10px;
         margin-bottom: 2.3rem;
-      }
-
-      &__container {
       }
 
       &__card {
@@ -133,7 +156,7 @@ body {
         color: var(--color4);
         font-size: var(--fs-18);
         font-weight: var(--fw-700);
-        
+
         &:hover {
           color: var(--color5);
         }
@@ -164,10 +187,10 @@ body {
       &:hover {
         background: linear-gradient(
           180deg,
-          lighten(rgba(72, 81, 255, 1),10%) 0.04%,
+          lighten(rgba(72, 81, 255, 1), 10%) 0.04%,
           lighten(rgba(240, 42, 166, 1), 10%) 100%
         );
       }
-    } 
+    }
   }
 }
