--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,46 +8,42 @@ body {
   background-color: #dfdfdf;
   font-family: var(--ff-PlusJakartaSans);
 
-  header,
   main {
     max-width: 375px;
     background-color: var(--white);
-    width: 100%;
+    background: linear-gradient(180deg, var(--white) 25%, #f0f2ff 100%);
     padding: 1rem;
+    overflow: hidden;
 
     @include breakpoint.media("md") {
       max-width: 768px;
       padding: 1.5rem 2.5rem;
     }
-  }
 
-  .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 2.6rem;
 
-    &__logo {
-      max-width: 89px;
-    }
+      &__logo {
+        max-width: 89px;
+      }
 
-    &__btn {
-      display: inline-block;
-      background-color: var(--color2);
-      color: var(--white);
-      font-size: var(--fs-16);
-      font-weight: var(--fw-700);
-      padding: 1rem 1.5rem;
-      border-radius: 50px;
+      &__btn {
+        display: inline-block;
+        background-color: var(--color2);
+        color: var(--white);
+        font-size: var(--fs-16);
+        font-weight: var(--fw-700);
+        padding: 1rem 1.5rem;
+        border-radius: 50px;
 
-      &:hover {
-        background-color: var(--color1);
+        &:hover {
+          background-color: var(--color1);
+        }
       }
     }
-  }
-
-  main {
-    background: linear-gradient(180deg, var(--white) 25%, #f0f2ff 100%);
-    overflow: hidden;
 
     .intro {
       @include breakpoint.media("md") {
@@ -58,7 +54,7 @@ body {
       &__container {
         @include breakpoint.media("md") {
           flex: 0 0 60%;
-          // transform: translateY(45px);
+          transform: translateY(45px);
         }
       }
       &__title {
@@ -69,14 +65,14 @@ body {
         margin-bottom: 1.5rem;
       }
       &__text {
-        font-size: var(--fs-16);
+        font-size: var(--fs-14);
         font-weight: var(--fw-500);
         color: var(--color3);
         line-height: 1.625;
         margin-bottom: 1rem;
 
         @include breakpoint.media("md") {
-          margin-bottom: 1.3rem;
+          margin-bottom: 1 0.3rem;
         }
       }
       &__btn {
