--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -31,6 +31,8 @@ body {
       }
 
       &__btn {
+        position: relative;
+        z-index: 2;
         display: inline-block;
         background-color: var(--color2);
         color: var(--white);
@@ -83,7 +85,7 @@ body {
         font-weight: var(--fw-700);
         padding: 1rem 2.3rem;
         border-radius: 50px;
-        margin-bottom: 1.3rem;
+        margin-bottom: 3.6rem;
 
         &:hover {
           background: linear-gradient(
@@ -100,7 +102,12 @@ body {
         }
       }
       &__img {
+        transform: scale(1.3);
+        margin-bottom: 1rem; 
+
         @include breakpoint.media("md") {
+          position: relative;
+          z-index: 1;
           width: 100%;
           transform: translate(-70px, -220px);
         }
