--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -103,7 +103,7 @@ body {
       }
       &__img {
         transform: scale(1.3);
-        margin-bottom: 1rem; 
+        margin-bottom: 1rem;
 
         @include breakpoint.media("md") {
           position: relative;
@@ -115,6 +115,12 @@ body {
     }
 
     .courses {
+      @include breakpoint.media("md") {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem;
+      }
+
       &__title {
         background: var(--gradient1);
         color: var(--white);
@@ -123,6 +129,10 @@ body {
         padding: 1.3rem;
         border-radius: 10px;
         margin-bottom: 2.3rem;
+
+        @include breakpoint.media("md") {
+          padding: 3.3rem 1.9rem;
+        }
       }
 
       &__card {
@@ -173,6 +183,10 @@ body {
     justify-content: space-between;
     background-color: var(--color2);
     padding: 2rem 1rem;
+
+    @include breakpoint.media("md") {
+      padding-inline: 2.5rem;
+    }
 
     &__logo {
       max-width: 89px;
