--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,6 +19,10 @@ body {
       max-width: 768px;
       padding: 1.5rem 2.5rem;
     }
+    @include breakpoint.media("lg") {
+      max-width: 1440px;
+      padding: 1.5rem 10rem;
+    }
 
     .header {
       display: flex;
@@ -28,6 +32,10 @@ body {
 
       &__logo {
         max-width: 89px;
+
+        @include breakpoint.media("lg") {
+          max-width: 111px;
+        }
       }
 
       &__btn {
@@ -40,6 +48,11 @@ body {
         font-weight: var(--fw-700);
         padding: 1rem 1.5rem;
         border-radius: 50px;
+
+        @include breakpoint.media("lg") {
+          font-size: var(--fs-18);
+          padding-inline: 2rem;
+        }
 
         &:hover {
           background-color: var(--color1);
@@ -58,6 +71,9 @@ body {
           flex: 0 0 60%;
           transform: translateY(45px);
         }
+        @include breakpoint.media("lg") {
+          transform: translateY(130px);
+        }
       }
       &__title {
         max-width: 343px;
@@ -65,16 +81,27 @@ body {
         font-size: var(--fs-40);
         font-weight: var(--fw-800);
         margin-bottom: 1.5rem;
+
+        @include breakpoint.media("lg") {
+          max-width: 457px;
+          font-size: var(--fs-56);
+        }
       }
       &__text {
-        font-size: var(--fs-14);
+        font-size: var(--fs-16);
         font-weight: var(--fw-500);
         color: var(--color3);
         line-height: 1.625;
         margin-bottom: 1rem;
 
         @include breakpoint.media("md") {
-          margin-bottom: 1 0.3rem;
+          margin-bottom: 1.3rem;
+        }
+        @include breakpoint.media("lg") {
+          max-width: 445px;
+          font-size: var(--fs-18);
+          line-height: 1.55;
+          margin-bottom: 2.3rem;
         }
       }
       &__btn {
@@ -86,6 +113,11 @@ body {
         padding: 1rem 2.3rem;
         border-radius: 50px;
         margin-bottom: 3.6rem;
+
+        @include breakpoint.media("lg") {
+          font-size: var(--fs-18);
+          padding-inline: 2rem;
+        }
 
         &:hover {
           background: linear-gradient(
@@ -100,6 +132,9 @@ body {
         @include breakpoint.media("md") {
           flex: 0 0 100%;
         }
+        @include breakpoint.media("lg") {
+          flex: 0 0 95%;
+        }
       }
       &__img {
         transform: scale(1.3);
@@ -111,6 +146,9 @@ body {
           width: 100%;
           transform: translate(-70px, -220px);
         }
+        @include breakpoint.media("lg") {
+          transform: translate(-110px, -290px);
+        }
       }
     }
 
@@ -119,6 +157,10 @@ body {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 1rem;
+      }
+      @include breakpoint.media("lg") {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
       }
 
       &__title {
@@ -133,6 +175,10 @@ body {
         @include breakpoint.media("md") {
           padding: 3.3rem 1.9rem;
         }
+        @include breakpoint.media("lg") {
+          margin-bottom: 3rem;
+          font-size: var(--fs-32);
+        }
       }
 
       &__card {
@@ -142,6 +188,10 @@ body {
         margin-bottom: 2.3rem;
         border-radius: 5px;
         box-shadow: 0px 1px rgba(0, 0, 0, 0.1);
+        
+        @include breakpoint.media("lg") {
+          margin-bottom: 3rem;
+        }
       }
 
       &__card-img {
@@ -155,6 +205,11 @@ body {
         font-weight: var(--fw-800);
         margin-top: 2.3rem;
         margin-bottom: 1rem;
+
+        @include breakpoint.media("lg") {
+          font-size: var(--fs-24);
+          margin-top: 2.9rem;
+        }
       }
       &__card-text {
         max-width: 286px;
@@ -163,12 +218,22 @@ body {
         font-weight: var(--fw-500);
         line-height: 1.625;
         margin-bottom: 1.3rem;
+        
+        @include breakpoint.media("lg") {
+          min-height: 112px;
+          font-size: var(--fs-18);
+          line-height: 1.55;
+        }
       }
 
       &__link {
+        display: inline-block;
         color: var(--color4);
         font-size: var(--fs-18);
         font-weight: var(--fw-700);
+        
+        @include breakpoint.media("lg") {
+        }
 
         &:hover {
           color: var(--color5);
