--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -188,8 +188,9 @@ body {
         margin-bottom: 2.3rem;
         border-radius: 5px;
         box-shadow: 0px 1px rgba(0, 0, 0, 0.1);
-        
+
         @include breakpoint.media("lg") {
+          padding: 1rem 2rem 2.9rem;
           margin-bottom: 3rem;
         }
       }
@@ -218,9 +219,9 @@ body {
         font-weight: var(--fw-500);
         line-height: 1.625;
         margin-bottom: 1.3rem;
-        
+
         @include breakpoint.media("lg") {
-          min-height: 112px;
+          min-height: 110px;
           font-size: var(--fs-18);
           line-height: 1.55;
         }
@@ -231,7 +232,7 @@ body {
         color: var(--color4);
         font-size: var(--fs-18);
         font-weight: var(--fw-700);
-        
+
         @include breakpoint.media("lg") {
         }
 
@@ -252,9 +253,16 @@ body {
     @include breakpoint.media("md") {
       padding-inline: 2.5rem;
     }
+    @include breakpoint.media("lg") {
+      padding-inline: 10rem;
+    }
 
     &__logo {
       max-width: 89px;
+
+      @include breakpoint.media("lg") {
+        max-width: 111px;
+      }
     }
 
     &__btn {
@@ -265,6 +273,11 @@ body {
       font-weight: var(--fw-700);
       padding: 1rem 1.5rem;
       border-radius: 50px;
+      
+      @include breakpoint.media("lg") {
+        font-size: var(--fs-18);
+        padding-inline: 2rem;
+        }
 
       &:hover {
         background: linear-gradient(
