Updated index.html and _colors.scss
changed courses cards links class name, added darker color  for courses__card-link elements for contrast

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -227,7 +227,7 @@ body {
         }
       }
 
-      &__link {
+      &__card-link {
         display: inline-block;
         color: var(--color4);
         font-size: var(--fs-18);
