created partials for different sections in components folder

--- a/src/sass/globals/_colors.scss
+++ b/src/sass/globals/_colors.scss
@@ -2,7 +2,7 @@
   --white: #ffffff;
   --color1: #666ca3;
   --color2: #13183f;
-  --color3: #83869a;
+  --color3: #717382;
   --color4: #e31858;
   --color5: #ffa7c3;
   --gradient1: linear-gradient(180deg, #ff6f48 0.04%, #f02aa6 100%);
