--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @forward "globals";
+@forward "components";
 @use "utilities" as breakpoint;
 
 body {
@@ -24,223 +25,10 @@ body {
       padding: 1.5rem 10rem;
     }
 
-    .header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 2.6rem;
+    
 
-      &__logo {
-        max-width: 89px;
+  
 
-        @include breakpoint.media("lg") {
-          max-width: 111px;
-        }
-      }
-
-      &__btn {
-        position: relative;
-        z-index: 2;
-        display: inline-block;
-        background-color: var(--color2);
-        color: var(--white);
-        font-size: var(--fs-16);
-        font-weight: var(--fw-700);
-        padding: 1rem 1.5rem;
-        border-radius: 50px;
-
-        @include breakpoint.media("lg") {
-          font-size: var(--fs-18);
-          padding-inline: 2rem;
-        }
-
-        &:hover {
-          background-color: var(--color1);
-        }
-      }
-    }
-
-    .intro {
-      @include breakpoint.media("md") {
-        display: flex;
-        margin-bottom: -12rem;
-      }
-
-      &__container {
-        @include breakpoint.media("md") {
-          flex: 0 0 60%;
-          transform: translateY(45px);
-        }
-        @include breakpoint.media("lg") {
-          transform: translateY(130px);
-        }
-      }
-      &__title {
-        max-width: 343px;
-        color: var(--color2);
-        font-size: var(--fs-40);
-        font-weight: var(--fw-800);
-        margin-bottom: 1.5rem;
-
-        @include breakpoint.media("lg") {
-          max-width: 457px;
-          font-size: var(--fs-56);
-        }
-      }
-      &__text {
-        font-size: var(--fs-16);
-        font-weight: var(--fw-500);
-        color: var(--color3);
-        line-height: 1.625;
-        margin-bottom: 1rem;
-
-        @include breakpoint.media("md") {
-          margin-bottom: 1.3rem;
-        }
-        @include breakpoint.media("lg") {
-          max-width: 445px;
-          font-size: var(--fs-18);
-          line-height: 1.55;
-          margin-bottom: 2.3rem;
-        }
-      }
-      &__btn {
-        display: inline-block;
-        background: var(--gradient1);
-        color: var(--white);
-        font-size: var(--fs-16);
-        font-weight: var(--fw-700);
-        padding: 1rem 2.3rem;
-        border-radius: 50px;
-        margin-bottom: 3.6rem;
-
-        @include breakpoint.media("lg") {
-          font-size: var(--fs-18);
-          padding-inline: 2rem;
-        }
-
-        &:hover {
-          background: linear-gradient(
-            180deg,
-            rgba(255, 111, 72, 0.5) 0.04%,
-            rgba(240, 42, 166, 0.5) 100%
-          );
-        }
-      }
-
-      &__picture {
-        @include breakpoint.media("md") {
-          flex: 0 0 100%;
-        }
-        @include breakpoint.media("lg") {
-          flex: 0 0 95%;
-        }
-      }
-      &__img {
-        transform: scale(1.3);
-        margin-bottom: 1rem;
-
-        @include breakpoint.media("md") {
-          position: relative;
-          z-index: 1;
-          width: 100%;
-          transform: translate(-70px, -220px);
-        }
-        @include breakpoint.media("lg") {
-          transform: translate(-110px, -290px);
-        }
-      }
-    }
-
-    .courses {
-      @include breakpoint.media("md") {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 1rem;
-      }
-      @include breakpoint.media("lg") {
-        grid-template-columns: repeat(3, 1fr);
-        gap: 2rem;
-      }
-
-      &__title {
-        background: var(--gradient1);
-        color: var(--white);
-        font-size: var(--fs-24);
-        font-weight: var(--fw-800);
-        padding: 1.3rem;
-        border-radius: 10px;
-        margin-bottom: 2.3rem;
-
-        @include breakpoint.media("md") {
-          padding: 3.3rem 1.9rem;
-        }
-        @include breakpoint.media("lg") {
-          margin-bottom: 3rem;
-          font-size: var(--fs-32);
-        }
-      }
-
-      &__card {
-        position: relative;
-        background-color: var(--white);
-        padding: 1rem 1.5rem 1.5rem;
-        margin-bottom: 2.3rem;
-        border-radius: 5px;
-        box-shadow: 0px 1px rgba(0, 0, 0, 0.1);
-
-        @include breakpoint.media("lg") {
-          padding: 1rem 2rem 2.9rem;
-          margin-bottom: 3rem;
-        }
-      }
-
-      &__card-img {
-        position: absolute;
-        transform: translateY(-70%);
-      }
-
-      &__card-title {
-        color: var(--color2);
-        font-size: var(--fs-20);
-        font-weight: var(--fw-800);
-        margin-top: 2.3rem;
-        margin-bottom: 1rem;
-
-        @include breakpoint.media("lg") {
-          font-size: var(--fs-24);
-          margin-top: 2.9rem;
-        }
-      }
-      &__card-text {
-        max-width: 286px;
-        color: var(--color3);
-        font-size: var(--fs-16);
-        font-weight: var(--fw-500);
-        line-height: 1.625;
-        margin-bottom: 1.3rem;
-
-        @include breakpoint.media("lg") {
-          min-height: 110px;
-          font-size: var(--fs-18);
-          line-height: 1.55;
-        }
-      }
-
-      &__card-link {
-        display: inline-block;
-        color: var(--color4);
-        font-size: var(--fs-18);
-        font-weight: var(--fw-700);
-
-        @include breakpoint.media("lg") {
-        }
-
-        &:hover {
-          color: var(--color5);
-        }
-      }
-    }
   }
 
   .footer {
