--- a/src/sass/globals/_typography.scss
+++ b/src/sass/globals/_typography.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Plus Jakarta Sans";
-  src: url("../../assets/fonts/PlusJakartaSans-VariableFont_wght.ttf")
+  src: url("../../assets/fonts/PlusJakartaSans-VariableFont_wght.woff2")
     format("truetype");
   font-display: swap;
 }
