updated html and scss
Added a heading in a <section> for better semantics and accessibility

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,11 +1,21 @@
 @use "../utilities" as breakpoint;
 
-
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 2.6rem;
+
+  &__title {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+  }
 
   &__logo {
     max-width: 89px;
